# neural_rx

./: CMakeLists.txt
runtime/: data_processing.cu  data_processing.h  trt_receiver.cpp
